# pyo3_runtime_types

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  LICENSE-MIT.txt  README.md  build.rs  clippy.toml  justfile
.github/workflows/: ci.yml  pre-commit.yml
src/: data_ptr.rs  ext.rs  lib.rs  tp.rs  type_erased.rs  typeobject.rs  typespec.rs
tests/: test.rs
